Added a bunch of unit tests

--- a/test/fixtures/techniques.yml
+++ b/test/fixtures/techniques.yml
@@ -1,13 +1,14 @@
 # == Schema Information
-# Schema version: 20110908031037
+# Schema version: 20110910035042
 #
 # Table name: techniques
 #
-#  id         :integer         not null, primary key
-#  name       :string(255)
-#  user_id    :integer
-#  created_at :datetime
-#  updated_at :datetime
+#  id          :integer         not null, primary key
+#  name        :string(255)
+#  user_id     :integer
+#  created_at  :datetime
+#  updated_at  :datetime
+#  description :string(255)
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
